tests/negative/neg_own_observe_move.safe
-- Test: neg_own_observe_move
-- Description: Moving an owner while an observer is active.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a-a:ae729065
-- Expected: REJECT observe_mutation

package observe_move_test

   type config is record
      rate : natural;


   type config_ptr is access config;

   function move_while_observed
      Owner    : config_ptr = new ((rate = 100) as config);
      Target   : config_ptr = null;
      Observer : access constant config = Owner.access;

      Target = Owner;  -- ERROR: move while observe is active



